--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "clarifai": "^2.8.1",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "file-save": "^0.2.0",
     "file-saver": "^1.3.8",
@@ -24,6 +25,7 @@
     "fs": "0.0.1-security",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
+    "https": "^1.0.0",
     "jQuery": "^1.7.4",
     "multer": "^1.3.1",
     "react": "^16.5.1",
